Funciones para cantidades y porcentajes de usuarios y director(cantidad)